raylib.odin


    @(link_name="GetWaveData")
    GetWaveData :: proc(wave : Wave) -> ^_c.float ---;

    @(link_name="LoadMusicStream")
    LoadMusicStream :: proc(fileName : cstring) -> Music ---;

    @(link_name="UnloadMusicStream")
    UnloadMusicStream :: proc(music : Music) ---;

    @(link_name="PlayMusicStream")
    PlayMusicStream :: proc(music : Music) ---;

    @(link_name="UpdateMusicStream")
    UpdateMusicStream :: proc(music : Music) ---;

    @(link_name="StopMusicStream")
    StopMusicStream :: proc(music : Music) ---;

    @(link_name="PauseMusicStream")
    PauseMusicStream :: proc(music : Music) ---;

    @(link_name="ResumeMusicStream")
    ResumeMusicStream :: proc(music : Music) ---;

    @(link_name="IsMusicPlaying")
    IsMusicPlaying :: proc(music : Music) -> bool ---;

    @(link_name="SetMusicVolume")
    SetMusicVolume :: proc(
        music : Music,
        volume : _c.float
    ) ---;

    @(link_name="SetMusicPitch")
    SetMusicPitch :: proc(
        music : Music,
        pitch : _c.float
    ) ---;

    @(link_name="SetMusicLoopCount")
    SetMusicLoopCount :: proc(
        music : Music,
        count : _c.int
    ) ---;

    @(link_name="GetMusicTimeLength")
    GetMusicTimeLength :: proc(music : Music) -> _c.float ---;

    @(link_name="GetMusicTimePlayed")
    GetMusicTimePlayed :: proc(music : Music) -> _c.float ---;

    @(link_name="InitAudioStream")
    InitAudioStream :: proc(
        sampleRate : _c.uint,
        sampleSize : _c.uint,
        channels : _c.uint
    ) -> AudioStream ---;

    @(link_name="UpdateAudioStream")
    UpdateAudioStream :: proc(
        stream : AudioStream,
        data : rawptr,
        samplesCount : _c.int
    ) ---;

    @(link_name="CloseAudioStream")
    CloseAudioStream :: proc(stream : AudioStream) ---;

    @(link_name="IsAudioBufferProcessed")
    IsAudioBufferProcessed :: proc(stream : AudioStream) -> bool ---;

    @(link_name="PlayAudioStream")
    PlayAudioStream :: proc(stream : AudioStream) ---;

    @(link_name="PauseAudioStream")
    PauseAudioStream :: proc(stream : AudioStream) ---;

    @(link_name="ResumeAudioStream")
    ResumeAudioStream :: proc(stream : AudioStream) ---;

    @(link_name="IsAudioStreamPlaying")
    IsAudioStreamPlaying :: proc(stream : AudioStream) -> bool ---;

    @(link_name="StopAudioStream")
    StopAudioStream :: proc(stream : AudioStream) ---;

    @(link_name="SetAudioStreamVolume")
    SetAudioStreamVolume :: proc(
        stream : AudioStream,
        volume : _c.float
    ) ---;

    @(link_name="SetAudioStreamPitch")
    SetAudioStreamPitch :: proc(
        stream : AudioStream,
        pitch : _c.float
    ) ---;

}
